--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
  - docker
 
 before_install:
- - docker build -t MYIMAGETESTTRAVIS -f Dockerfile.dev .
+ - docker build -t myimagetestwithtravis -f Dockerfile.dev .
 
 script:
- - docker run CI=true MYIMAGETESTTRAVIS npm run test
+ - docker run CI=true myimagetestwithtravis npm run test
