--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 RUN npm run test
-
+CMD ["npm", "run", "start"]
 
 FROM nginx
 COPY --from=mybuilder ./code/build /usr/share/nginx/html
