--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
  - docker build -t myimagetestwithtravis -f Dockerfile.dev .
 
 script:
- - docker run CI=true myimagetestwithtravis npm run test -- --coverage
+ - docker run myimagetestwithtravis npm run test -- --coverage
