--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,9 +5,9 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
-RUN npm run test
-CMD ["npm", "run", "start"]
+#RUN npm run test
+#CMD ["npm", "run", "start"]
 
-#FROM nginx
-#COPY --from=mybuilder ./code/build /usr/share/nginx/html
+FROM nginx
+COPY --from=mybuilder ./code/build /usr/share/nginx/html
 
