--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services: 
  - docker
@@ -6,4 +7,4 @@ before_install:
  - docker build -t sondang86/docker-reactjs-travis -f Dockerfile.dev .
 
 script:
- - docker run -e CI=true sondang86/docker-reactjs-travis npm test
+ - docker run -e CI=true sondang86/docker-reactjs-travis npm run test
