--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,6 +8,7 @@ RUN npm run build
 #RUN npm run test
 CMD ["npm", "run", "start"]
 
-#FROM nginx
-#COPY --from=mybuilder ./code/build /usr/share/nginx/html
+FROM nginx
+EXPOSE 80
+COPY --from=mybuilder ./code/build /usr/share/nginx/html
 
