commented out npm start in dockerfile

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 #RUN npm run test
-CMD ["npm", "run", "start"]
+#CMD ["npm", "run", "start"]
 
 FROM nginx
 EXPOSE 80
