--- a/Dockerfile_dev_bak
+++ b/Dockerfile_dev_bak
@@ -6,11 +6,9 @@ RUN npm install
 COPY . .
 RUN npm run build
 #RUN npm run test
-#CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start"]
 
-FROM nginx
-COPY --from=mybuilder ./code/build /usr/share/nginx/html
+#FROM nginx
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
-
+#COPY --from=mybuilder ./code/build /usr/share/nginx/html
 
