--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,5 +12,4 @@ FROM nginx
 COPY --from=mybuilder ./code/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
-
-
+CMD ["npm", "run", "start"]
