--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,9 +4,9 @@ WORKDIR /code
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+#RUN npm run build
 #RUN npm run test
-#CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start"]
 
 #FROM nginx
 #COPY --from=mybuilder ./code/build /usr/share/nginx/html
