--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
  - docker build -t sondang86/docker-reactjs-travis -f Dockerfile.dev .
 
 script:
- - docker run -e CI=true sondang86/docker-reactjs-travis npm run test
+ #- docker run -e CI=true sondang86/docker-reactjs-travis npm run test
+ - docker run sondang86/docker-reactjs-travis npm run test -- --coverage
 
 deploy:
  provider: elasticbeanstalk
