--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,5 +11,5 @@ RUN npm run build
 FROM nginx
 COPY --from=mybuilder ./code/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+#CMD ["nginx", "-g", "daemon off;"]
 #CMD ["npm", "run", "start"]
