--- a/Dockerfile_bak_02Aug2019
+++ b/Dockerfile_bak_02Aug2019
@@ -5,8 +5,9 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+RUN CI=true npm run test
+CMD ["npm", "run", "start"]
 
 FROM nginx
-EXPOSE 80
 COPY --from=mybuilder ./code/build /usr/share/nginx/html
 
