--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ services:
 before_install:
  - docker build -t sondang86/docker-reactjs-travis -f Dockerfile.dev .
 
-#script:
- #- docker run -e CI=true sondang86/docker-reactjs-travis npm run test
+script:
+ - docker run -e CI=true sondang86/docker-reactjs-travis npm run test
 
 deploy:
  provider: elasticbeanstalk
